agregando archivo style.css y javascript.js

--- a/html/index.html
+++ b/html/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Sencilla</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/javascript.js"></script>
 </head>
-<style>
-    body{
-        background-color: aqua;
-    }
-</style>
+
 <body>
     <h1>
         Mi nombre Alejandro Brando Carrillo
     </h1>
     <img src="cat.jpeg">
     <h1>Registro Universitario: 1707538</h1>
+    <button id="btnCambiarFondo">Cambiar Fondo</button>
 </body>
 </html>
