--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,7 @@
     </h1>
     <img src="cat.jpeg">
     <h1>Registro Universitario: 1707538</h1>
+    <h2>Materia INF-122</h2>
     <button id="btnCambiarFondo">Cambiar Fondo</button>
 </body>
 </html>
